--- a/public/stylesheets/newListing.css
+++ b/public/stylesheets/newListing.css
@@ -2,17 +2,6 @@ body {
   background: #4a90e2;
 }
 
-footer {
-  margin: 0;
-  height: 45px;
-  width: 100%;
-  background-color: #000034;
-  font-family: 'Nunito', sans-serif;
-  position: fixed;
-  z-index: 10;
-  bottom: 0px;
-}
-
 #new-listing {
   font-family: 'Noto Sans', sans-serif;
   font-size: 18px;
