--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -1,14 +1,3 @@
-footer {
-  margin: 0;
-  height: 45px;
-  width: 100%;
-  background-color: #000034;
-  font-family: 'Nunito', sans-serif;
-  position: fixed;
-  z-index: 10;
-  bottom: 0px;
-}
-
 .split {
   height: 100%;
   width: 50%;
